# kamsta

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  alltoall_benchmarks.hpp  build_config.hpp.in  comm_benchmarks.cpp  growt.cpp  local_mst.cpp  mst.cpp  mst_benchmarks.hpp  openmp_test.cpp  parlay_test.cpp  read_config_file.hpp  twolevel_alltoall.cpp
benchmarks/algorithm_instantiations/: algo_1.cpp  algo_2.cpp  algo_3.cpp  algo_4.cpp  algo_5.cpp  algo_6.cpp  algo_7.cpp  algo_8.cpp
cmake_helpers/: target_link_libraries_system.cmake
evaluation/: README.md  run_experiments.py  sbatch_runner.py
evaluation/command_templates/: shared_memory.txt
evaluation/evaluation_all/: command_template_supermuc.txt  graphs.yaml  run_experiments.py  utils.py
evaluation/evaluation_all/jobfile_templates/: horeka.txt
evaluation/evaluation_horeka/: command_template.txt  gnm.yaml  graphs.yaml  run_experiments.py  sbatch_runner.py  submit_jobs.sh  test.yaml
evaluation/evaluation_local/: graphs.yaml  run_experiments.py  sbatch_runner.py
evaluation/evaluation_supermuc/: graphs.yaml  jobfile_template.txt  run_experiments.py  sbatch_runner.py  supermuc_load_config.sh  test.yaml
evaluation/experiment_suites/: strong_scaling  weak_scaling.yaml
include/: definitions.hpp  edge_types.hpp  shared_mem_parallel.hpp
include/algorithms/: algorithm_configurations.hpp  base_case_mst_algos.hpp  boruvka_allreduce.hpp  boruvka_impl.cpp  collection_on_subgroup.hpp  distributed_partitioning.hpp  gbbs_reimplementation.hpp  hybrid_boruvka.hpp  hybrid_boruvka_edgefilter.hpp  input_edge_partitioning.hpp
include/algorithms/filter_boruvka_substeps/: filter_helpers.hpp  get_new_labels.hpp
include/algorithms/gbbs/: bridge.hpp
include/algorithms/hybrid_boruvka_substeps/: duplicate_detection.hpp  edge_consecutive.hpp  edge_renaming.hpp  get_ghost_representatives.hpp  is_representative_computation.hpp  local_kernelization.hpp  minimum_edge_computation.hpp  misc.hpp  representative_computation.hpp
include/algorithms/local_contraction/: local_contraction.hpp  local_contraction_local_edge_removal.hpp  local_timer.hpp  mst_on_local_edgs.hpp  mst_utils.hpp  utils.hpp
include/algorithms/local_contraction/local_boruvka/: local_filter_boruvka_with_halving.hpp  local_mst_and_contraction.hpp  local_mst_respecting_cut_edges.hpp  mst_utils_common.hpp  mst_utils_cut_edges.hpp  mst_utils_filter.hpp  mst_utils_plain.hpp
include/algorithms/twolevel_sorting/: twolevel_sorting.hpp  twolevel_sorting_helpers.hpp
include/datastructures/: compressed_graph.hpp  concurrent_lookup_map.hpp  distributed_array.hpp  distributed_graph.hpp  distributed_graph_helper.hpp  distributed_org_vertex_retrieval.hpp  distributed_parent_array.hpp  growt.hpp  lookup_map.hpp  sparse_distributed_graph_helpers.hpp  union_find.hpp  variable_length_encoding.hpp
include/datastructures/algorithms/: pointer_jumping_on_dist_array.hpp
include/datastructures/compression/: difference_encoded_graph.hpp  uncompressed_graph.hpp
include/mpi/: allgather.hpp  allreduce.hpp  alltoall.hpp  alltoall_combined.hpp  broadcast.hpp  context.hpp  gather.hpp  grid_communicators.hpp  scan.hpp  send_recv.hpp  twolevel_alltoall.hpp  twolevel_alltoall_helpers.hpp  twolevel_columnmajor_communicator.hpp  type_handling.hpp
include/util/: allocators.hpp  atomic_ops.hpp  benchmark_helpers.hpp  classifier.hpp  communication_volume_measurements.hpp  edge_checker.hpp  macros.hpp  memory_utils.hpp  timer.cpp  timer.hpp  utils.hpp
test/: CMakeLists.txt  out  test_alltoall.cpp  test_boruvka.cpp  test_distributed_graph.cpp  test_distributed_parent_array.cpp  test_distributed_partitioning.cpp  test_gbbs.cpp  test_input.txt  test_local_contraction.cpp  test_main.cpp  test_twolevel_alltoall.cpp  utils.hpp
tests/: test_sets.sh
